--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <h2>WDD 230 Assignment Portal</h2>
             <hr>
             <ul>
-                <li>Lesson 2: <a href="#" target="_blank">Assignment Link</a></li>
+                <li>Lesson 2: <a href="#" target="_blank">Assignment Link :p</a></li>
                 <li>Lesson 3: <a href="#" target="_blank">Assignment Link</a></li>
             </ul>
 </main>
