--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
         <meta name="author" content="Andrew Poore">
         <meta name="description" content="Assignment portal for Andrew Poore in WDD 230: Web Frontend Development at Brigham Young University – Idaho. This portal will contain hyper links to all of the assignments that will be graded throughout the semester. This page will serve as a main hub to keep track of my progress in this class throughout the semester. Each week will build upon the principles learned from the weeks before. ">
         <link type="text/css" rel="stylesheet" href="style.css" />
+        <link rel="stylesheet" href="normalize.css">
+        <link rel="stylesheet" href="medium.css">
         <title>
         Andrew Poore WDD 230
         </title>
