--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <h2>WDD 230 Assignment Portal</h2>
             <hr>
             <ul>
-                <li>Lesson 2: <a href="#" target="_blank">Assignment Link</a></li>
+                <li>Lesson 2: <a href="lesson02/design-principles.html" target="_blank">Design Principles</a></li>
                 <li>Lesson 3: <a href="#" target="_blank">Assignment Link</a></li>
             </ul>
         </main>
