--- a/lesson02/design-principles.html
+++ b/lesson02/design-principles.html
@@ -3,40 +3,35 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <link type="text/css" rel="stylesheet" href="style.css" />
+        <meta name="description" content="This is an HTML document that explains design principles in web design.">
         <link type="text/css" rel="stylesheet" href="mobile.css" />
+        <link type="text/css" rel="stylesheet" href="medium.css" />
+        <link type="text/css" rel="stylesheet" href="large.css" />
         <title>
         Design Principles
         </title>
     </head>
     <body>
-    <header></header>
-<nav></nav>
-<main>
-            <div class="container">
-    <section id="1" class="principle">
-        <h1 class="1">Visual Hierarchy</h1>
-        <a target="_blank" href="https://www.behance.net/">Adobe Behance</a>
-        <img class="ss" src="images/behance.png">
-        <p>Adobe Behance uses visual heirarchy by making the title of the art bigger and bold, then crediting the artist right below the title of the work in a smaller font.</p> 
-    </section>
-</div>
-        <div class="container">
-    <section id="2" class="principle">
-        <h1 class="2">White Space and Clean Design</h1>
-        <a target="_blank" href="https://fonts.google.com/">Google Fonts</a>
-        <img class="ss" src="images/google fonts.png">
-        <p>Google fonts design is very open and minimal. It makes it very easy to select a font and makes the process very intuitive.</p>
-    </section>
-</div>
-        <div class="container">
-    <section id="3" class="principle">
-        <h1 class="3">Alignment</h1>
-        <a target="_blank" href="https://www.commarts.com/gallery">Communication Arts</a>
-        <img class="ss" src="images/ca alignment.png">
-        <p>Comm Arts displays several different works of art in the same proximity with a very beautiful grid format.</p>
-    </section>
-</div>
-</main>
-</body>
+        <h1>Design Principles Assignment</h1>
+        <main>
+            <section>
+                <h1>Visual Hierarchy</h1>
+                <a target="_blank" href="https://www.behance.net/">Adobe Behance</a>
+                <img alt="Mobile screenshot of Adobe Behance UI" src="images/behance.png">
+                <p>Adobe Behance uses visual heirarchy by making the title of the art bigger and bold, then crediting the artist right below the title of the work in a smaller font.</p>
+            </section>
+            <section>
+                <h1>White Space and Clean Design</h1>
+                <a target="_blank" href="https://fonts.google.com/">Google Fonts</a>
+                <img alt="Mobile screenshot of Google Fonts UI" src="images/google fonts.png">
+                <p>Google fonts design is very open and minimal. It makes it very easy to select a font and makes the process very intuitive.</p>
+            </section>
+            <section>
+                <h1>Alignment</h1>
+                <a target="_blank" href="https://www.commarts.com/gallery">Communication Arts</a>
+                <img alt="Mobile screenshot of Communication Arts UI" src="images/ca alignment.png">
+                <p>Comm Arts displays several different works of art in the same proximity with a very beautiful grid format.</p>
+            </section>
+        </main>
+    </body>
 </html>
