--- a/index.html
+++ b/index.html
@@ -6,20 +6,17 @@
         <meta name="author" content="Andrew Poore">
         <meta name="description" content="Assignment portal for Andrew Poore in WDD 230: Web Frontend Development at Brigham Young University – Idaho. This portal will contain hyper links to all of the assignments that will be graded throughout the semester. This page will serve as a main hub to keep track of my progress in this class throughout the semester. Each week will build upon the principles learned from the weeks before. ">
         <link type="text/css" rel="stylesheet" href="style.css" />
-        <link rel="stylesheet" href="normalize.css">
-        <link rel="stylesheet" href="medium.css">
         <title>
         Andrew Poore WDD 230
         </title>
     </head>
-    <body id="index">
+    <body>
         <header>
-            <h1 id="name">Andrew Poore</h1>
-            <img id="profile" src="https://cdn.glitch.com/362192d5-d676-4cdf-a128-3d489d586e82%2FMe%20n%20Bella.jpg?v=1619212312338" alt="Me and my dog, Bella">
+            <h1>Andrew Poore</h1>
+            <img src="https://cdn.glitch.com/362192d5-d676-4cdf-a128-3d489d586e82%2FMe%20n%20Bella.jpg?v=1619212312338" alt="Me and my dog, Bella">
         </header>
         <main>
             <h2>WDD 230 Assignment Portal</h2>
-            <hr>
             <ul>
                 <li>Lesson 2: <a href="lesson02/design-principles.html" target="_blank">Design Principles</a></li>
                 <li>Lesson 3: <a href="#" target="_blank">Assignment Link</a></li>
