site plan revision

--- a/lesson03/color-scheme.html
+++ b/lesson03/color-scheme.html
@@ -23,7 +23,7 @@
         <main>
             <img src="images/color palette.png">
             <p>
-                I chose this color palette, because the colors are very vibrant and fun. The turqoise and mustard yellow colors also contrast very well against the red color.
+                I chose this color palette, because the colors are very vibrant and fun. The turqoise and mustard yellow colors also contrast very well against the red color. I am still deciding what colors to implement where.
             </p>
         </main>
     </body>
