--- a/lesson03/index.html
+++ b/lesson03/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="description" content="Site Plan for the final weather website project for WDD230.">
         <link type="text/css" rel="stylesheet" href="style/mobile.css" />
+        <link rel="stylesheet" type="text/css" href="style/reset.css">
         <title>
         Site Plan Overview
         </title>
