--- a/lesson03/typography.html
+++ b/lesson03/typography.html
@@ -19,7 +19,11 @@
                 <li><a href="color-scheme.html">Color Scheme</a></li>
             </ul>
         </nav>
-<main></main>
-<footer></footer>
+<main>
+<h2>Heading Font</h2>
+<p>For the heading font, I chose to import "Itim" from Google Fonts. It's an interesting, fun looking font, yet still very easy to read.</p>
+<h2>Secondary Font</h2>
+<p>For the secondary font, I chose Arial. It is a classic sans-serif font that is legible even for those who are somewhat visually impaired.</p>
+</main>
 </body>
 </html>
