Site Plan media queries and final touches

--- a/lesson03/color-scheme.html
+++ b/lesson03/color-scheme.html
@@ -4,7 +4,10 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="description" content="Color palette for the website.">
-        <link type="text/css" rel="stylesheet" href="style/mobile.css" />
+        <link rel="stylesheet" type="text/css" href="style/mobile.css">
+        <link rel="stylesheet" type="text/css" href="style/reset.css">
+        <link rel="stylesheet" type="text/css" href="style/medium.css">
+        <link rel="stylesheet" type="text/css" href="style/large.css">
         <title>
         Color Scheme
         </title>
