--- a/lesson03/target-audience.html
+++ b/lesson03/target-audience.html
@@ -4,7 +4,10 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="description" content="Description of target demographics for the site">
-        <link type="text/css" rel="stylesheet" href="style/mobile.css" />
+        <link rel="stylesheet" type="text/css" href="style/mobile.css">
+        <link rel="stylesheet" type="text/css" href="style/reset.css">
+        <link rel="stylesheet" type="text/css" href="style/medium.css">
+        <link rel="stylesheet" type="text/css" href="style/large.css">
         <title>
         Target Audience
         </title>
@@ -40,6 +43,14 @@
                 <li>Demographics and Education: 40 year old female with some college experience.</li>
                 <li>Motivation for using the site: Nancy likes to check the weather before she goes to work so she can dress accordingly.</li>
             </ul>
+            <h2>5 Scenarios:</h2>
+            <ol>
+                <li>What is the weather like in Soda Springs today?</li>
+                <li>Is it going to rain in Preston today?</li>
+                <li>Are there any events going on this weekend?</li>
+                <li>Is it going to be windy today?</li>
+                <li>What's the high temperature going to be today?</li>
+            </ol>
         </main>
     </body>
 </html>
