--- a/lesson03/index.html
+++ b/lesson03/index.html
@@ -4,8 +4,10 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="description" content="Site Plan for the final weather website project for WDD230.">
-        <link type="text/css" rel="stylesheet" href="style/mobile.css" />
+        <link rel="stylesheet" type="text/css" href="style/mobile.css">
         <link rel="stylesheet" type="text/css" href="style/reset.css">
+        <link rel="stylesheet" type="text/css" href="style/medium.css">
+        <link rel="stylesheet" type="text/css" href="style/large.css">
         <title>
         Site Plan Overview
         </title>
