--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <ul>
                 <li>Lesson 2: <a href="lesson02/design-principles.html" target="_blank">Design Principles</a></li>
                 <li>Lesson 3: <a href="lesson03/index.html" target="_blank">Site Plan</a></li>
+                <li>Lesson 4: <a href="lesson04/preston-4.html">Preston</a></li>
             </ul>
         </main>
         <footer>
