--- a/lesson05/preston-5.html
+++ b/lesson05/preston-5.html
@@ -8,6 +8,7 @@
 		<link rel="stylesheet" type="text/css" href="css/small.css">
 		<link rel="stylesheet" type="text/css" href="css/medium.css">
 		<link rel="stylesheet" type="text/css" href="css/large.css">
+		<link rel="stylesheet" type="text/css" href="css/normalize.css">
 	</head>
 	<body>
 		<header>
