--- a/lesson05/preston-troll.html
+++ b/lesson05/preston-troll.html
@@ -4,8 +4,8 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="description" content="Weather reports and news for the city of Preston, Idaho.">
+		        <link rel="shortcut icon" type="icon/ico" href="images/logo.ico">
 		<title>Preston | Beautiful Sunny Day</title>
-		<link rel="shortcut icon" type="icon/ico" href="images/logo.ico">
 		<link rel="stylesheet" type="text/css" href="css/normalize.css">
 		<link rel="stylesheet" type="text/css" href="css/small.css">
 		<link rel="stylesheet" type="text/css" href="css/medium.css">
@@ -15,7 +15,6 @@
 		<header>
 			<img id="logo" alt="Beautiful Sunny Day Logo" src="images/logo.jpg">
 			<div id="headerContainer">
-				<span id="pancakes"></span>
 				<h1>Beautiful Sunny Day</h1>
 				<h2>Weather for you!</h2>
 			</div>
@@ -23,13 +22,13 @@
 		<nav>
 			<div id="buttonContainer">
 				<button>
-				<img alt="Menu Icon" id="hamburger" src="images/hamburger.jpg">
+				<img id="hamburger" src="images/hamburger.jpg">
 				</button>
 				<span>Menu</span>
 			</div>
 			<ul id="ul">
 				<li><a href="#">Home</a></li>
-				<li><a href="preston-5.html">Preston</a></li>
+				<li><a href="preston-troll.html">Preston</a></li>
 				<li><a href="#">Soda Springs</a></li>
 				<li><a href="#">Fish Haven</a></li>
 				<li><a href="#">Storm Center</a></li>
