--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <li>Lesson 2: <a href="lesson02/design-principles.html" target="_blank">Design Principles</a></li>
                 <li>Lesson 3: <a href="lesson03/index.html" target="_blank">Site Plan</a></li>
                 <li>Lesson 4: <a href="lesson04/preston-4.html">Preston</a></li>
-                <li>Lesson 5 activity: <a href="lesson05/bom.html">DOM Manipulation</a></li
+                <li>Lesson 5 activity: <a href="lesson05/bom.html">DOM Manipulation</a></li>
                 <li>Lesson 5: <a href="lesson05/preston-5.html">Preston Continued</a></li>
             </ul>
         </main>
