--- a/index.html
+++ b/index.html
@@ -1,16 +1,49 @@
 <!DOCTYPE html>
 <html lang="en-us">
-    <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <link type="text/css" rel="stylesheet" href="styles.css" />
-        <title>
-        </title>
-    </head>
-    <body>
-    <header></header>
-<nav></nav>
-<main>HELLO WORLD</main>
-<footer></footer>
+
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+  name="description"
+  content="Assingment portal home page for WDD230." />
+    <link type="text/css" rel="stylesheet" href="styles/small.css" />
+    <title>
+        WDD230 Assignment Portal
+    </title>
+</head>
+
+<body>
+    <header>
+        <img src="images/cocoCay.png" alt="Me and my family in the Caribbean">
+        <div>
+            <h1>Andrew Poore</h1>
+        </div>
+    </header>
+    <nav></nav>
+    <main>
+        <h2>WDD 230: Assignment Portal</h2>
+        <hr>
+        <ul>
+            <li>Lesson 2: <a href="#">Title</a></li>
+            <li>Lesson 3: <a href="#">Title</a></li>
+            <li>Lesson 4: <a href="#">Title</a></li>
+            <li>Lesson 5: <a href="#">Title</a></li>
+            <li>Lesson 6: <a href="#">Title</a></li>
+            <li>Lesson 7: <a href="#">Title</a></li>
+            <li>Lesson 8: <a href="#">Title</a></li>
+            <li>Lesson 9: <a href="#">Title</a></li>
+            <li>Leson 10: <a href="#">Title</a></li>
+            <li>Leson 11: <a href="#">Title</a></li>
+        </ul>
+    </main>
+    <hr>
+    <footer>
+        <p>&copy;<span id="year"></span> - Andrew Poore - Utah
+            <br>Last Updated: <span id="lastMod"></span>
+        </p>
+    </footer>
+    <script src="scripts/index.js"></script>
 </body>
+
 </html>
