--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta
-  name="description"
-  content="Assingment portal home page for WDD230." />
+    <meta name="description" content="Assingment portal home page for WDD230." />
+    <link rel="stylesheet" href="styles/normalize.css">
     <link type="text/css" rel="stylesheet" href="styles/small.css" />
     <title>
         WDD230 Assignment Portal
