--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <hr>
         <ul>
             <li>Lesson 2: <a href="week2/design-principles.html">Design Principles</a></li>
-            <li>Lesson 3: <a href="#">Title</a></li>
+            <li>Lesson 3: <a href="week3/index.html">Website Planning Document</a></li>
             <li>Lesson 4: <a href="#">Title</a></li>
             <li>Lesson 5: <a href="#">Title</a></li>
             <li>Lesson 6: <a href="#">Title</a></li>
