self closing tags

--- a/week3/index.html
+++ b/week3/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en-us">
 
-<head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Week 3 website planning document for chamber of commerce project." />
-    <link type="text/css" rel="stylesheet" href="styles/small.css" />
-    <link type="text/css" rel="stylesheet" href="styles/medium.css" />
-    <link type="text/css" rel="stylesheet" href="styles/large.css" />
-    <title>Website Planning Document</title>
-</head>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="description" content="Week 3 website planning document for chamber of commerce project.">
+        <link type="text/css" rel="stylesheet" href="styles/small.css">
+        <link type="text/css" rel="stylesheet" href="styles/medium.css">
+        <link type="text/css" rel="stylesheet" href="styles/large.css">
+        <title>Typography</title>
+    </head>
 
 <body>
     <header>
