--- a/week3/index.html
+++ b/week3/index.html
@@ -8,7 +8,7 @@
         <link type="text/css" rel="stylesheet" href="styles/small.css">
         <link type="text/css" rel="stylesheet" href="styles/medium.css">
         <link type="text/css" rel="stylesheet" href="styles/large.css">
-        <title>Typography</title>
+        <title>Website Overview</title>
     </head>
 
 <body>
