--- a/week3/target-audience.html
+++ b/week3/target-audience.html
@@ -8,7 +8,7 @@
         <link type="text/css" rel="stylesheet" href="styles/small.css">
         <link type="text/css" rel="stylesheet" href="styles/medium.css">
         <link type="text/css" rel="stylesheet" href="styles/large.css">
-        <title>Typography</title>
+        <title>Target Audience</title>
     </head>
 
 <body>
