--- a/week2/design-principles.html
+++ b/week2/design-principles.html
@@ -3,12 +3,12 @@
 
 <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Week 2 assignment on design principles." />
-    <link type="text/css" rel="stylesheet" href="styles/normalize.css" />
-    <link type="text/css" rel="stylesheet" href="styles/small.css" />
-    <link type="text/css" rel="stylesheet" href="styles/medium.css" />
-    <link type="text/css" rel="stylesheet" href="styles/large.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Week 2 assignment on design principles.">
+    <link type="text/css" rel="stylesheet" href="styles/normalize.css">
+    <link type="text/css" rel="stylesheet" href="styles/small.css">
+    <link type="text/css" rel="stylesheet" href="styles/medium.css">
+    <link type="text/css" rel="stylesheet" href="styles/large.css">
     <title>
         Design Principles
     </title>
