--- a/week2/design-principles.html
+++ b/week2/design-principles.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
 
 <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Week 2 assignment on design principles.">
     <link type="text/css" rel="stylesheet" href="styles/normalize.css">
