--- a/chamber/index.html
+++ b/chamber/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Chamber of commerce project for WDD230.">
-    <link type="text.css" rel="stylesheet" href="styles/normalize.css">
+    <link type="textcss" rel="stylesheet" href="styles/normalize.css">
     <link type="text/css" rel="stylesheet" href="styles/small.css">
     <link type="text/css" rel="stylesheet" href="styles/medium.css">
     <link type="text/css" rel="stylesheet" href="styles/large.css">
@@ -15,11 +15,11 @@
 <body>
     <header>
         <div id="headerWrapper">
-            <img src="images/logo.png">
-            <section>
+            <img src="images/logo.png" alt="Rexburg Chamber of Commerce logo">
+            <div>
                 <h1>Rexburg</h1>
                 <div class="primaryFont">Chamber of Commerce</div>
-            </section>
+            </div>
             <div id="headerBtns">
                 <a target="_blank" href="https://www.facebook.com">
                     <ion-icon class="socials" name="logo-facebook"></ion-icon>
@@ -29,7 +29,8 @@
                 </a>
                 <nav>
                     <ul class="navigation">
-                        <li class="primaryFont"><a href="#" onclick="toggleMenu()"><img id="hamburger" src="images/hamburger-menu.png.png"></a></li>
+                        <li class="primaryFont"><a href="#" onclick="toggleMenu()"><img alt="navigation button icon"
+                                    id="hamburger" src="images/hamburger-menu.png.png"></a></li>
                         <li class="primaryFont"><a href="#">Page 1</a></li>
                         <li class="primaryFont"><a href="#">Page 2</a></li>
                         <li class="primaryFont"><a href="#">Page 3</a></li>
@@ -42,14 +43,14 @@
     </header>
 
     <main>
-        <section id="hero" class="mainSection">Hero with site name and call to action</section>
-        <section class="mainSection" id="event">Event</section>
-        <section class="mainSection" id="weather">Weather</section>
-        <section class="mainSection" id="newsRelease">News Release</section>
-        <section class="mainSection" id="spotlight1">Spotlight 1</section>
-        <section class="mainSection" id="spotlight2">Spotlight 2</section>
-        <section class="mainSection" id="spotlight3">spotlight3</section>
-        <section class="mainSection" id="join">Join</section>
+        <div id="hero" class="mainSection">Hero with site name and call to action</div>
+        <div class="mainSection" id="event">Event</div>
+        <div class="mainSection" id="weather">Weather</div>
+        <div class="mainSection" id="newsRelease">News Release</div>
+        <div class="mainSection" id="spotlight1">Spotlight 1</div>
+        <div class="mainSection" id="spotlight2">Spotlight 2</div>
+        <div class="mainSection" id="spotlight3">spotlight3</div>
+        <div class="mainSection" id="join">Join</div>
     </main>
 
     <footer class="primaryFont">
