--- a/chamber/index.html
+++ b/chamber/index.html
@@ -5,9 +5,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Chamber of commerce project for WDD230.">
-    <link type="textcss" rel="stylesheet" href="styles/normalize.css">
+    <link type="text/css" rel="stylesheet" href="styles/normalize.css">
     <link type="text/css" rel="stylesheet" href="styles/small.css">
-    <link type="text/css" rel="stylesheet" href="styles/medium.css">
+    <link type="text/css" rel="stylesheet" hre  f="styles/medium.css">
     <link type="text/css" rel="stylesheet" href="styles/large.css">
     <title>Home | Rexburg Chamber</title>
 </head>
