--- a/chamber/index.html
+++ b/chamber/index.html
@@ -66,13 +66,8 @@
             <br><a href="#" target="_blank">📍Location Map</a>
         </div>
         <div id="footerBottom">
-            <p>&copy;
-                <span id="year"></span>
-                Rexburg Chamber
-                <br>
-                <div>Andrew Poore</div>
-                <br>WDD230 Project
-                <br>Last Updated: <span id="lastModified"></span>
+            <p>&copy;<span id="year"></span>Rexburg Chamber<br>
+                <div>Andrew Poore</div><br>WDD230 Project<br>Last Updated: <span id="lastModified"></span>
             </p>
         </div>
     </footer>
