--- a/chamber/index.html
+++ b/chamber/index.html
@@ -66,7 +66,8 @@
             <br><a href="#" target="_blank">📍Location Map</a>
         </div>
         <div id="footerBottom">
-            <p>&copy;<span id="year"></span>Rexburg Chamber<br><div>Andrew Poore</div><br>WDD230 Project<br>Last Updated: <span id="lastModified"></span></p>
+            <p>&copy;<span id="year"></span>Rexburg Chamber<br>
+                <div>Andrew Poore</div><br>WDD230 Project<br>Last Updated: <span id="lastModified"></span>
         </div>
     </footer>
     <script src="scripts/index.js"></script>
