--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <li>Lesson 2: <a href="week2/design-principles.html">Design Principles</a></li>
             <li>Lesson 3: <a href="week3/index.html">Website Planning Document</a></li>
             <li>Lesson 4: <a href="chamber/index.html">Chamber Home Page Build</a></li>
-            <li>Lesson 5: <a href="#">Title</a></li>
+            <li>Lesson 5 activity: <a href="week5/bom/bom.html">DOM Manipulation</a></li>
             <li>Lesson 6: <a href="#">Title</a></li>
             <li>Lesson 7: <a href="#">Title</a></li>
             <li>Lesson 8: <a href="#">Title</a></li>
