--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en-us">
 
 <head>
+    <link rel="shortcut icon" href="images/favicon.ico">
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Assingment portal home page for WDD230." />
