--- a/chamber/index.html
+++ b/chamber/index.html
@@ -102,8 +102,8 @@
             </div>
         </div>
         <div class="mainSection" id="join">
-        <button>Join Us!</button>
-        Discover how to join the chamber of commerce and how it will benefit your organization!
+            <button><a href="#">Join Us!</a></button>
+            Discover how to join the chamber of commerce and how it will benefit your organization!
         </div>
     </main>
 
