--- a/chamber/index.html
+++ b/chamber/index.html
@@ -51,7 +51,7 @@
             <div id="heroWrapper">
                 <h2>Welcome to Rexburg</h2>
                 <div>
-                    <button><a class="primaryFont" href="#">Join the Chamber</a></button>
+                    <a class="primaryFont" href="#">Join the Chamber</a>
                 </div>
             </div>
         </div>
@@ -102,7 +102,7 @@
             </div>
         </div>
         <div class="mainSection" id="join">
-            <button><a href="#">Join Us!</a></button>
+            <a href="#">Join Us!</a>
             Discover how to join the chamber of commerce and how it will benefit your organization!
         </div>
     </main>
