--- a/chamber/index.html
+++ b/chamber/index.html
@@ -47,7 +47,16 @@
     </header>
 
     <main>
+
         <div id="hero" class="mainSection">
+            <span id="small-image">Small</span>
+            <span id="medium-image">Medium</span>
+            <span id="large-image">Large</span>
+            <picture>
+                <source id="largeHero" media="(min-width:600px)" srcset="week-6-images/temp-hero600.jpg">
+                <source media="(min-width:500px)" srcset="week-6-images/temp-hero500.jpg">
+                <img src="week-6-images/temp-hero300.jpg" alt="hero image" style="width:auto;">
+            </picture>
             <div id="heroWrapper">
                 <h2>Welcome to Rexburg</h2>
                 <div>
@@ -55,6 +64,19 @@
                 </div>
             </div>
         </div>
+
+
+        <!--
+        <div id="heroWrapper">
+
+            <picture id="hero" class="mainSection">
+                <source media="(min-width:720px)" srcset="week-6-images/medium-wdd230-org.jpg">
+                <source media="(min-width:992px)" srcset="images/hero-image.jpg">
+                <img src="week-6-images/small-wdd230-org.jpg" alt="temporary image" style="height:auto;" style="width:100%;">
+            </picture>
+        -->
+        </div>
+
         <div class="mainSection" id="event">
             <h2>Ribbon Cutting</h2>
             <h3>💎The Diamond Shack</h3>
@@ -63,13 +85,29 @@
         </div>
         <div class="mainSection" id="weather">
             <h2>Weather</h2>
+            <p>
+                Enter the temperature in Farenheit and the wind speed to calculate the wind chill.
+            </p>
+            <div id="output">
+            </div>
+            <div>
+                Temperature
+            </div>
+            <input id="temperature" type="text">
+            <div>
+                Wind Speed
+            </div>
+            <input id="windSpeed" type="text">
+            <button id="windChillBtn" onclick="doInputOutput()" type="button">
+               Calculate Wind Chill
+            </button>
         </div>
         <div class="mainSection" id="newsRelease">
             <h2>News Release</h2>
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quidem modi qui ab aliquam ipsa expedita
             distinctio in quo quia. Et illum ea quisquam necessitatibus eos optio mollitia nisi corporis repellendus.
         </div>
-        <div id="Spotlights">
+        
             <div class="mainSection" id="spotlight1">
                 <h2>Thankful Transport</h2>
                 <img src="images/truck.png" alt="Thankful Transport logo">
@@ -100,7 +138,6 @@
                     +999-999-9999 | <a href="#">Tree Forts</a>
                 </div>
             </div>
-        </div>
         <div class="mainSection" id="join">
             <a href="#">Join Us!</a>
             Discover how to join the chamber of commerce and how it will benefit your organization!
