--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <li>Lesson 4: <a href="chamber/index.html">Chamber Home Page Build</a></li>
             <li>Lesson 5: <a href="chamber/index.html">Chamber Home Page Continued</a></li>
             <li>Lesson 5 activity: <a href="week5/bom/bom.html">DOM Manipulation</a></li>
-            <li>Lesson 6: <a href="#">Title</a></li>
+            <li>Lesson 6: <a href="chamber/index.html">Responsive Design</a></li>
             <li>Lesson 7: <a href="#">Title</a></li>
             <li>Lesson 8: <a href="#">Title</a></li>
             <li>Lesson 9: <a href="#">Title</a></li>
