--- a/chamber/index.html
+++ b/chamber/index.html
@@ -17,7 +17,10 @@
     <header>
         <div id="meetAndGreet"></div>
         <div id="headerWrapper">
-            <img src="images/logo.png" alt="Rexburg Chamber of Commerce logo">
+            <picture>
+                <source srcset="images/logo.webp">
+                <img src="images/logo.png" alt="logo">
+            </picture>
             <div>
                 <h1>Rexburg</h1>
                 <div class="primaryFont">Chamber of Commerce</div>
@@ -99,7 +102,7 @@
             </div>
             <input id="windSpeed" type="text">
             <button id="windChillBtn" onclick="doInputOutput()" type="button">
-               Calculate Wind Chill
+                Calculate Wind Chill
             </button>
         </div>
         <div class="mainSection" id="newsRelease">
@@ -107,37 +110,37 @@
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quidem modi qui ab aliquam ipsa expedita
             distinctio in quo quia. Et illum ea quisquam necessitatibus eos optio mollitia nisi corporis repellendus.
         </div>
-        
-            <div class="mainSection" id="spotlight1">
-                <h2>Thankful Transport</h2>
-                <img src="images/truck.png" alt="Thankful Transport logo">
-                <h3>"We get it there for you!"</h3>
-                <hr>
-                <div>
-                    hello@thankfultransport.com<br>
-                    +999-999-9999 | <a href="#" target="_blank">Thankful Transport</a>
-                </div>
+
+        <div class="mainSection" id="spotlight1">
+            <h2>Thankful Transport</h2>
+            <img src="images/truck.png" alt="Thankful Transport logo">
+            <h3>"We get it there for you!"</h3>
+            <hr>
+            <div>
+                hello@thankfultransport.com<br>
+                +999-999-9999 | <a href="#" target="_blank">Thankful Transport</a>
             </div>
-            <div class="mainSection" id="spotlight2">
-                <h2>Code Primera</h2>
-                <img src="images/codePrimera.png" alt="Code Primera logo">
-                <h3>An after school coding instructional program.</h3>
-                <hr>
-                <div>
-                    contact@codeprimera.com<br>
-                    +999-999-9999 | <a href="#">Code Primera</a>
-                </div>
+        </div>
+        <div class="mainSection" id="spotlight2">
+            <h2>Code Primera</h2>
+            <img src="images/codePrimera.png" alt="Code Primera logo">
+            <h3>An after school coding instructional program.</h3>
+            <hr>
+            <div>
+                contact@codeprimera.com<br>
+                +999-999-9999 | <a href="#">Code Primera</a>
             </div>
-            <div class="mainSection" id="spotlight3">
-                <h2>Build a Tree Fort</h2>
-                <img src="images/tree-house.png" alt="Build a Tree Fort logo">
-                <h3>Over 1,000 Plans!</h3>
-                <hr>
-                <div>
-                    builda@treefort.com<br>
-                    +999-999-9999 | <a href="#">Tree Forts</a>
-                </div>
+        </div>
+        <div class="mainSection" id="spotlight3">
+            <h2>Build a Tree Fort</h2>
+            <img src="images/tree-house.png" alt="Build a Tree Fort logo">
+            <h3>Over 1,000 Plans!</h3>
+            <hr>
+            <div>
+                builda@treefort.com<br>
+                +999-999-9999 | <a href="#">Tree Forts</a>
             </div>
+        </div>
         <div class="mainSection" id="join">
             <a href="#">Join Us!</a>
             Discover how to join the chamber of commerce and how it will benefit your organization!
@@ -146,7 +149,10 @@
 
     <footer class="primaryFont">
         <div>
-            <img src="images/logo.png" alt="Rexburg Chamber of Commerce logo">
+            <picture>
+                <source srcset="images/logo.webp">
+                <img src="images/logo.png" alt="logo">
+            </picture>
             <p>
                 Rexburg Chamber of Commerce
                 <br>222 Tracy Run
