--- a/chamber/index.html
+++ b/chamber/index.html
@@ -30,9 +30,9 @@
                     <ul class="navigation">
                         <li class="primaryFont"><a href="#" onclick="toggleMenu()"><img alt="navigation button icon"
                                     id="hamburger" src="images/hamburger-menu.png.png"></a></li>
-                        <li class="primaryFont"><a href="#">Page 1</a></li>
-                        <li class="primaryFont"><a href="#">Page 2</a></li>
-                        <li class="primaryFont"><a href="#">Page 3</a></li>
+                        <li class="primaryFont"><a href="index.html">Home</a></li>
+                        <li class="primaryFont"><a href="discover.html">Discover</a></li>
+                        <li class="primaryFont"><a href="join.html">Join</a></li>
                         <li class="primaryFont"><a href="#">Page 4</a></li>
                     </ul>
                 </nav>
