--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <li>Lesson 5 activity: <a href="week5/bom/bom.html">DOM Manipulation</a></li>
             <li>Lesson 6: <a href="chamber/index.html">Responsive Design</a></li>
             <li>Lesson 7: <a href="chamber/discover.html">Discover Page</a></li>
-            <li>Lesson 8: <a href="#">Title</a></li>
+            <li>Lesson 8: <a href="chamber/join.html">Join Page</a></li>
             <li>Lesson 9: <a href="#">Title</a></li>
             <li>Leson 10: <a href="#">Title</a></li>
             <li>Leson 11: <a href="#">Title</a></li>
