--- a/chamber/index.html
+++ b/chamber/index.html
@@ -28,8 +28,7 @@
             <div id="headerBtns">
                 <nav>
                     <ul class="navigation">
-                        <li class="primaryFont"><a href="#" onclick="toggleMenu()"><img alt="navigation button icon"
-                                    id="hamburger" src="images/hamburger-menu.png.png"></a></li>
+                        <li class="primaryFont"><a href="#" onclick="toggleMenu()"><img alt="navigation button icon" id="hamburger" src="images/hamburger-menu.png.png"></a></li>
                         <li class="primaryFont"><a href="index.html">Home</a></li>
                         <li class="primaryFont"><a href="discover.html">Discover</a></li>
                         <li class="primaryFont"><a href="join.html">Join</a></li>
