--- a/chamber/join.html
+++ b/chamber/join.html
@@ -53,12 +53,12 @@
 
     <main>
         <form action="thankyou.html">
-            <div class="formfield"><label for="firstName">First Name:</label><input id="firstName" name="firstName" required type="text"></div>
-            <div class="formfield"><label for="lastName">Last Name:</label><input id="lastName" name="lastName" required type="text"></div>
+            <div class="formfield"><label for="firstName">First Name:</label><input id="firstName" name="firstName" type="text" required></div>
+            <div class="formfield"><label for="lastName">Last Name:</label><input id="lastName" name="lastName" type="text" required></div>
             <div class="formfield"><label for="position">Business Position:</label><input pattern="[a-zA-Z\D- ]{7,}" title="Must only include alpha characters, hyphens, and spaces with a minimum of seven characters" id="position" name="position" type="text"></div>
-            <div class="formfield"><label for="email">E-mail:</label><input id="email" name="email" required type="email" placeholder="johndoe@gmail.com"></div>
-            <div class="formfield"><label for="phone">Phone Number:</label><input id="phone" name="phone" required type="tel"></div>
-            <div class="formfield"><label for="title">Business Name/Title:</label><input id="title" name="title" required type="text"></div>
+            <div class="formfield"><label for="email">E-mail:</label><input id="email" name="email" type="email" placeholder="johndoe@gmail.com" required></div>
+            <div class="formfield"><label for="phone">Phone Number:</label><input id="phone" name="phone" type="tel" required></div>
+            <div class="formfield"><label for="title">Business Name/Title:</label><input id="title" name="title" type="text" required></div>
             <div id="membership" class="formField">
                 Membership Level:
                 <div class="formField"><label><input name="level" type="radio">NP Membership</label></div>
