--- a/chamber/join.html
+++ b/chamber/join.html
@@ -55,7 +55,7 @@
         <form action="thankyou.html">
             <div class="formfield"><label for="firstName">First Name:</label><input id="firstName" name="firstName" type="text" required></div>
             <div class="formfield"><label for="lastName">Last Name:</label><input id="lastName" name="lastName" type="text" required></div>
-            <div class="formfield"><label for="position">Business Position:</label><input pattern="[a-zA-Z\D- ]{7,}" title="Must only include alpha characters, hyphens, and spaces with a minimum of seven characters" id="position" name="position" type="text"></div>
+            <div class="formfield"><label for="position">Business Position:</label><input pattern="[a-zA-Z- ]{7,}" title="Must only include alpha characters, hyphens, and spaces with a minimum of seven characters" id="position" name="position" type="text"></div>
             <div class="formfield"><label for="email">E-mail:</label><input id="email" name="email" type="email" placeholder="johndoe@gmail.com" required></div>
             <div class="formfield"><label for="phone">Phone Number:</label><input id="phone" name="phone" type="tel" required></div>
             <div class="formfield"><label for="title">Business Name/Title:</label><input id="title" name="title" type="text" required></div>
