--- a/chamber/join.html
+++ b/chamber/join.html
@@ -53,12 +53,19 @@
 
     <main>
         <form action="thankyou.html" method="get">
-            <div class="formfield"><label for="firstName">First Name:</label><input id="firstName" name="firstName" type="text" required></div>
-            <div class="formfield"><label for="lastName">Last Name:</label><input id="lastName" name="lastName" type="text" required></div>
-            <div class="formfield"><label for="position">Business Position:</label><input pattern="[a-zA-Z- ]{7,}" title="Must only include alpha characters, hyphens, and spaces with a minimum of seven characters" id="position" name="position" type="text"></div>
-            <div class="formfield"><label for="email">E-mail:</label><input id="email" name="email" type="email" placeholder="johndoe@gmail.com" required></div>
-            <div class="formfield"><label for="phone">Phone Number:</label><input id="phone" name="phone" type="tel" required></div>
-            <div class="formfield"><label for="title">Business Name/Title:</label><input id="title" name="title" type="text" required></div>
+            <div class="formfield"><label for="firstName">First Name:</label><input id="firstName" name="firstName"
+                    type="text" required></div>
+            <div class="formfield"><label for="lastName">Last Name:</label><input id="lastName" name="lastName"
+                    type="text" required></div>
+            <div class="formfield"><label for="position">Business Position:</label><input pattern="[a-zA-Z- ]{7,}"
+                    title="Must only include alpha characters, hyphens, and spaces with a minimum of seven characters"
+                    id="position" name="position" type="text"></div>
+            <div class="formfield"><label for="email">E-mail:</label><input id="email" name="email" type="email"
+                    placeholder="johndoe@gmail.com" required></div>
+            <div class="formfield"><label for="phone">Phone Number:</label><input id="phone" name="phone" type="tel"
+                    required></div>
+            <div class="formfield"><label for="title">Business Name/Title:</label><input id="title" name="title"
+                    type="text" required></div>
             <fieldset id="membership" class="formField">
                 <legend> Memberhsip Level:</legend>
                 <div class="formField"><label><input name="level" type="radio">NP Membership</label></div>
@@ -69,7 +76,7 @@
             <div id="business" class="formField"><label> Description:<br><textarea></textarea></label></div>
             <div><input name="formLoadTime" type="hidden"></div>
             <label for="submit" id="submitLabel">Submit</label>
-                <input name="submit" type="submit" value="Join Now!">
+            <input id="submitLabel" name="submit" type="submit" value="Join Now!">
         </form>
     </main>
 
