--- a/chamber/join.html
+++ b/chamber/join.html
@@ -76,7 +76,7 @@
             <div id="business" class="formField"><label> Description:<br><textarea></textarea></label></div>
             <div><input name="formLoadTime" type="hidden"></div>
             <label for="submit" id="submitLabel">Submit</label>
-            <input id="submitLabel" name="submit" type="submit" value="Join Now!">
+            <input id="submit" name="submit" type="submit" value="Join Now!">
         </form>
     </main>
 
