--- a/chamber/join.html
+++ b/chamber/join.html
@@ -68,16 +68,37 @@
                     type="text" required></div>
             <fieldset id="membership" class="formField">
                 <legend> Memberhsip Level:</legend>
-                <div class="formField"><label><input name="level" type="radio">NP Membership</label></div>
-                <div class="formField"><label><input name="level" type="radio">Bronze Membership</label></div>
-                <div class="formField"><label><input name="level" type="radio">Silver Membership</label></div>
-                <div class="formField"><label><input name="level" type="radio">Gold Membership</label></div>
+                <div class="formField"><label><input name="level" type="radio">NP Membership</label> <span
+                        class="membership">(No fee
+                        membership for non-profit organizations)</span></div>
+                <div class="formField"><label><input name="level" type="radio">Bronze Membership</label>
+                    <span class="membership">(introduction to the powerful resources available at the Rexburg
+                        Chamber)</span></div>
+                <div class="formField"><label><input name="level" type="radio">Silver Membership</label> <span
+                        class="membership"> (Allows
+                        you to expand your knowledge and clout while building a network of influential peers.)</span>
+                </div>
+                <div class="formField"><label><input name="level" type="radio">Gold Membership</label> <span
+                        class="membership">(Customized
+                        advocacy briefings and advantageous partnerships.)</span></div>
             </fieldset>
-            <div id="business" class="formField"><label> Description:<br><textarea></textarea></label></div>
+            <div id="business" class="formField"><label> Business Description:<br><textarea></textarea></label></div>
             <div><input name="formLoadTime" type="hidden"></div>
             <label for="submit" id="submitLabel">Submit</label>
             <input id="submit" name="submit" type="submit" value="Join Now!">
         </form>
+
+        <section id="membershipDescriptions">
+            <div class="levels"><h3>NP Membership:</h3>No fee
+                membership for non-profit organizations.</div>
+            <div class="levels"><h3>Bronze Membership:</h3>An introduction to the powerful resources available at the Rexburg
+                Chamber.</div>
+            <div class="levels"><h3>Silver Membership:</h3>Allows
+                you to expand your knowledge and clout while building a network of influential peers.</div>
+            <div class="levels"><h3>Gold Membership:</h3>Customized
+                advocacy briefings and advantageous partnerships.</div>
+        </section>
+
     </main>
 
     <footer class="primaryFont">
