--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <li>Lesson 6: <a href="chamber/index.html">Responsive Design</a></li>
             <li>Lesson 7: <a href="chamber/discover.html">Discover Page</a></li>
             <li>Lesson 8: <a href="chamber/join.html">Join Page</a></li>
-            <li>Lesson 9: <a href="#">Title</a></li>
+            <li>Lesson 9: <a href="week9/prophets.html">Prophets JSON Activity</a></li>
             <li>Leson 10: <a href="#">Title</a></li>
             <li>Leson 11: <a href="#">Title</a></li>
         </ul>
