--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -11,7 +11,14 @@
 
 <body>
     <main>
-        <div class="cards"></div>
+        <div class="menu">
+            <button id="grid">Grid</button>
+            <button id="list">List</button>
+        </div>
+        <hr>
+        <article class="grid">
+            <div class="cards"></div>
+        </article>
     </main>
 
     <footer></footer>
