--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -10,6 +10,7 @@
     <link type="text/css" rel="stylesheet" href="styles/small.css">
     <link type="text/css" rel="stylesheet" href="styles/medium.css">
     <link type="text/css" rel="stylesheet" href="styles/large.css">
+    <link type="text/css" rel="stylesheet" href="styles/discover-large.css">
     <title>Discover | Rexburg Chamber</title>
 </head>
 
@@ -28,11 +29,12 @@
             <div id="headerBtns">
                 <nav>
                     <ul class="navigation">
-                        <li class="primaryFont"><a href="#" onclick="toggleMenu()"><img alt="navigation button icon" id="hamburger" src="images/hamburger-menu.png.png"></a></li>
+                        <li class="primaryFont"><a href="#" onclick="toggleMenu()"><img alt="navigation button icon"
+                                    id="hamburger" src="images/hamburger-menu.png.png"></a></li>
                         <li class="primaryFont"><a href="index.html">Home</a></li>
                         <li class="primaryFont"><a href="discover.html">Discover</a></li>
                         <li class="primaryFont"><a href="join.html">Join</a></li>
-                        <li class="primaryFont"><a href="#">Page 4</a></li>
+                        <li class="primaryFont"><a href="contact.html">Contact Us</a></li>
                     </ul>
                 </nav>
             </div>
@@ -49,12 +51,36 @@
     </header>
 
     <main>
-        <img class="galleryImg" loading="lazy" src="images/gallery/bogusBasin.jpg" alt="Bogus Basin">
-        <img class="galleryImg" l class="galleryImg" oading="lazy" src="images/gallery/sawToothRange.jpg"
-            alt="Saw Tooth Mountain Range">
-        <img class="galleryImg" loading="lazy" src="images/gallery/challis.jpg" alt="Challis, Idaho">
-        <img class="galleryImg" loading="lazy" src="images/gallery/stanleyIdaho.jpg" alt="Stanley, Idaho">
-        <img class="galleryImg" loading="lazy" src="images/gallery/boise.jpg" alt="Boise Wilderness">
+        <div class="galleryCtn">
+            <img class="galleryImg" loading="lazy" src="images/gallery/bogusBasin.jpg" alt="Bogus Basin">
+            Bogus Basin Mountain Recreation Area is a ski area in Boise County, Idaho, sixteen road miles (26 km)
+            north-northeast of the city of Boise.
+        </div>
+        <div class="galleryCtn">
+            <img class="galleryImg" l class="galleryImg" oading="lazy" src="images/gallery/sawToothRange.jpg"
+                alt="Saw Tooth Mountain Range">
+            The Sawtooth Range is a mountain range of the Rocky Mountains in central Idaho reaching a maximum elevation
+            of 10,751 feet at the summit of Thompson Peak. It encompasses an area of 678 square miles. There are 57
+            peaks with an elevation over 10,000 feet in the Sawtooth Range, all between 10,000 to 10,751 feet in
+            elevation.
+        </div>
+        <div class="galleryCtn">
+            <img class="galleryImg" loading="lazy" src="images/gallery/challis.jpg" alt="Challis, Idaho">
+            Challis is the largest city in Custer County, Idaho, United States. It is the county seat and its population
+            was 1,081 at the 2010 census. The 2020 census shows 902 residents, a 16.6% drop.
+        </div>
+        <div class="galleryCtn">
+            <img class="galleryImg" loading="lazy" src="images/gallery/stanleyIdaho.jpg" alt="Stanley, Idaho">
+            Stanley is a town in the Sawtooth Valley in Custer County, Idaho, United States. The population was 116 at
+            the 2020 census; up from 63 in 2010. The center of population of Idaho in 2000 was located in Stanley.
+        </div>
+        <div class="galleryCtn">
+            <img class="galleryImg" loading="lazy" src="images/gallery/boise.jpg" alt="Boise Wilderness">
+            Boise is the capital and most populous city of the U.S. state of Idaho
+            and is the county seat of Ada County. On the Boise River in southwestern Idaho, it is 41 miles (66 km) east
+            of the Oregon border and 110 miles (177 km) north of the Nevada border. The downtown area's elevation is
+            2,704 feet (824 m) above sea level. The population according to the 2020 US Census was 235,684.
+        </div>
     </main>
 
     <footer class="primaryFont">
@@ -70,7 +96,7 @@
             </p>
             <br>info@rexburgchamber.org
             <br>+(012)345-6789
-            <br><a href="#" target="_blank">📍Location Map</a>
+            <br><a href="https://www.google.com/maps/place/Rexburg,+ID/@43.8300451,-111.8232024,13z/data=!3m1!4b1!4m5!3m4!1s0x53540a4b807a98b1:0x4a49d8d1d2181c73!8m2!3d43.8231096!4d-111.7924237" target="_blank">📍Location Map</a>
         </div>
         <div id="footerBottom">
             <p>&copy;<span id="year"></span>Rexburg Chamber<br>
