--- a/chamber/index.html
+++ b/chamber/index.html
@@ -32,7 +32,7 @@
                         <li class="primaryFont"><a href="index.html">Home</a></li>
                         <li class="primaryFont"><a href="discover.html">Discover</a></li>
                         <li class="primaryFont"><a href="join.html">Join</a></li>
-                        <li class="primaryFont"><a href="#">Page 4</a></li>
+                        <li class="primaryFont"><a href="contact.html">Contact</a></li>
                     </ul>
                 </nav>
             </div>
@@ -62,7 +62,7 @@
             <div id="heroWrapper">
                 <h2>Welcome to Rexburg</h2>
                 <div>
-                    <a class="primaryFont" href="#">Join the Chamber</a>
+                    <a class="primaryFont" href="join.html">Join the Chamber</a>
                 </div>
             </div>
         </div>
@@ -159,7 +159,7 @@
             </p>
             <br>info@rexburgchamber.org
             <br>+(012)345-6789
-            <br><a href="#" target="_blank">📍Location Map</a>
+            <br><a href="https://www.google.com/maps/place/Rexburg,+ID/@43.8300451,-111.8232024,13z/data=!3m1!4b1!4m5!3m4!1s0x53540a4b807a98b1:0x4a49d8d1d2181c73!8m2!3d43.8231096!4d-111.7924237" target="_blank">📍Location Map</a>
         </div>
         <div id="footerBottom">
             <p>&copy;<span id="year"></span>Rexburg Chamber<br>
